Refine party utilities and suggestions